feat: Update .gitignore and add tasks-state.json for task management

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,8 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+.kamui/apps/*
+.kamui/system-graph-state.json
+.kamui/gantte/test.yaml
+.kamui/model-versions-cache.json
