feat: Add new tasks for sidebar and theme toggle functionality

--- a/.kamui/tasks-state.json
+++ b/.kamui/tasks-state.json
@@ -88,5 +88,50 @@
     "aiCompetitionMonitor": false,
     "monitorTargets": null,
     "scoringConfig": null
+  },
+  {
+    "id": "task-1764773029214-d7599b",
+    "name": "ヘッダーを削除してサイドバーとメインウィンドウは画面上部まで表示。タイムラインページの「チケット追加」「担当者管理」「プロジェクト」はタイムラインをクリックしたらサイドバーに表示するように変更",
+    "model": "Claude Code",
+    "status": "pending",
+    "importance": "medium",
+    "urgency": "medium",
+    "createdAt": "2025-12-03T14:43:49.214Z",
+    "updatedAt": "2025-12-03T14:43:49.214Z",
+    "requiresTerminal": false,
+    "createWorktree": false,
+    "branchName": null,
+    "baseBranch": null,
+    "useTmux": false,
+    "aiCompetitionEntry": false,
+    "aiCompetitionResult": null,
+    "aiCompetitionGroupId": null,
+    "aiCompetitionGroupName": null,
+    "aiCompetitionMonitor": false,
+    "monitorTargets": null,
+    "scoringConfig": null
+  },
+  {
+    "id": "task-1764773048761-74824c",
+    "name": "ClaudeCode1: テーマをダークとライトを切り替えられるようにする",
+    "model": "Claude Code",
+    "status": "working",
+    "importance": "medium",
+    "urgency": "medium",
+    "createdAt": "2025-12-03T14:44:08.761Z",
+    "updatedAt": "2025-12-03T14:44:08.761Z",
+    "requiresTerminal": true,
+    "createWorktree": true,
+    "branchName": "task/task-1764773048761-74824c",
+    "baseBranch": "main",
+    "useTmux": true,
+    "aiCompetitionEntry": true,
+    "aiCompetitionResult": null,
+    "aiCompetitionGroupId": "comp-1764773048557-2yhvv9wt",
+    "aiCompetitionGroupName": "テーマをダークとライトを切り替えられるようにする",
+    "aiCompetitionMonitor": false,
+    "monitorTargets": null,
+    "scoringConfig": null,
+    "worktreePath": ".worktrees\\task-1764773048761-74824c"
   }
 ]
