feat: Update task configurations and add new task for sidebar and main window adjustments

--- a/.kamui/tasks-state.json
+++ b/.kamui/tasks-state.json
@@ -6,22 +6,28 @@
     "status": "working",
     "importance": "medium",
     "urgency": "medium",
-    "createdAt": "2025-12-03T13:24:00.801Z",
-    "updatedAt": "2025-12-03T14:19:05.826Z",
-    "requiresTerminal": true,
-    "createWorktree": true,
     "branchName": "task/task-1764768240801-f3fd56",
     "baseBranch": "main",
-    "useTmux": true,
+    "worktreePath": ".worktrees\\task-1764768240801-f3fd56",
+    "createWorktree": true,
+    "createdAt": "2025-12-03T13:24:00.801Z",
+    "updatedAt": "2025-12-03T15:18:17.681Z",
+    "requiresTerminal": true,
+    "bookmarked": false,
     "aiCompetitionEntry": true,
     "aiCompetitionResult": null,
     "aiCompetitionGroupId": "comp-1764768240597-b20fq6a3",
     "aiCompetitionGroupName": "サイドバーを作成し、サイドバーに \"ホーム\", \"プロジェクト\", \"タイムライン\", \"レポート\"を追加",
-    "aiCompetitionMonitor": false,
-    "monitorTargets": null,
-    "scoringConfig": null,
-    "worktreePath": ".worktrees\\task-1764768240801-f3fd56",
-    "bookmarked": true
+    "autoEvaluationNotBefore": null,
+    "useTmux": true,
+    "taskType": null,
+    "modelId": null,
+    "latestVersion": null,
+    "currentVersion": null,
+    "installSteps": [],
+    "installCommand": null,
+    "createdAutomatically": false,
+    "dependencies": []
   },
   {
     "id": "task-1764768181008-6a40f6",
@@ -30,20 +36,28 @@
     "status": "pending",
     "importance": "medium",
     "urgency": "medium",
+    "branchName": null,
+    "baseBranch": null,
+    "worktreePath": null,
+    "createWorktree": false,
     "createdAt": "2025-12-03T13:23:01.008Z",
     "updatedAt": "2025-12-03T13:23:01.008Z",
     "requiresTerminal": false,
-    "createWorktree": false,
-    "branchName": null,
-    "baseBranch": null,
-    "useTmux": false,
+    "bookmarked": false,
     "aiCompetitionEntry": false,
     "aiCompetitionResult": null,
     "aiCompetitionGroupId": null,
     "aiCompetitionGroupName": null,
-    "aiCompetitionMonitor": false,
-    "monitorTargets": null,
-    "scoringConfig": null
+    "autoEvaluationNotBefore": null,
+    "useTmux": false,
+    "taskType": null,
+    "modelId": null,
+    "latestVersion": null,
+    "currentVersion": null,
+    "installSteps": [],
+    "installCommand": null,
+    "createdAutomatically": false,
+    "dependencies": []
   },
   {
     "id": "task-1764768065344-91d950",
@@ -52,20 +66,28 @@
     "status": "pending",
     "importance": "medium",
     "urgency": "medium",
+    "branchName": null,
+    "baseBranch": null,
+    "worktreePath": null,
+    "createWorktree": false,
     "createdAt": "2025-12-03T13:21:05.344Z",
     "updatedAt": "2025-12-03T13:21:05.344Z",
     "requiresTerminal": false,
-    "createWorktree": false,
-    "branchName": null,
-    "baseBranch": null,
-    "useTmux": false,
+    "bookmarked": false,
     "aiCompetitionEntry": false,
     "aiCompetitionResult": null,
     "aiCompetitionGroupId": null,
     "aiCompetitionGroupName": null,
-    "aiCompetitionMonitor": false,
-    "monitorTargets": null,
-    "scoringConfig": null
+    "autoEvaluationNotBefore": null,
+    "useTmux": false,
+    "taskType": null,
+    "modelId": null,
+    "latestVersion": null,
+    "currentVersion": null,
+    "installSteps": [],
+    "installCommand": null,
+    "createdAutomatically": false,
+    "dependencies": []
   },
   {
     "id": "task-1764768052052-e455ec",
@@ -74,20 +96,28 @@
     "status": "pending",
     "importance": "medium",
     "urgency": "medium",
+    "branchName": null,
+    "baseBranch": null,
+    "worktreePath": null,
+    "createWorktree": false,
     "createdAt": "2025-12-03T13:20:52.052Z",
     "updatedAt": "2025-12-03T13:20:52.052Z",
     "requiresTerminal": false,
-    "createWorktree": false,
-    "branchName": null,
-    "baseBranch": null,
-    "useTmux": false,
+    "bookmarked": false,
     "aiCompetitionEntry": false,
     "aiCompetitionResult": null,
     "aiCompetitionGroupId": null,
     "aiCompetitionGroupName": null,
-    "aiCompetitionMonitor": false,
-    "monitorTargets": null,
-    "scoringConfig": null
+    "autoEvaluationNotBefore": null,
+    "useTmux": false,
+    "taskType": null,
+    "modelId": null,
+    "latestVersion": null,
+    "currentVersion": null,
+    "installSteps": [],
+    "installCommand": null,
+    "createdAutomatically": false,
+    "dependencies": []
   },
   {
     "id": "task-1764773029214-d7599b",
@@ -96,20 +126,28 @@
     "status": "pending",
     "importance": "medium",
     "urgency": "medium",
+    "branchName": null,
+    "baseBranch": null,
+    "worktreePath": null,
+    "createWorktree": false,
     "createdAt": "2025-12-03T14:43:49.214Z",
     "updatedAt": "2025-12-03T14:43:49.214Z",
     "requiresTerminal": false,
-    "createWorktree": false,
-    "branchName": null,
-    "baseBranch": null,
-    "useTmux": false,
+    "bookmarked": false,
     "aiCompetitionEntry": false,
     "aiCompetitionResult": null,
     "aiCompetitionGroupId": null,
     "aiCompetitionGroupName": null,
-    "aiCompetitionMonitor": false,
-    "monitorTargets": null,
-    "scoringConfig": null
+    "autoEvaluationNotBefore": null,
+    "useTmux": false,
+    "taskType": null,
+    "modelId": null,
+    "latestVersion": null,
+    "currentVersion": null,
+    "installSteps": [],
+    "installCommand": null,
+    "createdAutomatically": false,
+    "dependencies": []
   },
   {
     "id": "task-1764773048761-74824c",
@@ -118,20 +156,50 @@
     "status": "working",
     "importance": "medium",
     "urgency": "medium",
-    "createdAt": "2025-12-03T14:44:08.761Z",
-    "updatedAt": "2025-12-03T14:44:08.761Z",
-    "requiresTerminal": true,
-    "createWorktree": true,
     "branchName": "task/task-1764773048761-74824c",
     "baseBranch": "main",
-    "useTmux": true,
+    "worktreePath": ".worktrees\\task-1764773048761-74824c",
+    "createWorktree": true,
+    "createdAt": "2025-12-03T14:44:08.761Z",
+    "updatedAt": "2025-12-03T15:18:11.832Z",
+    "requiresTerminal": true,
+    "bookmarked": true,
     "aiCompetitionEntry": true,
     "aiCompetitionResult": null,
     "aiCompetitionGroupId": "comp-1764773048557-2yhvv9wt",
     "aiCompetitionGroupName": "テーマをダークとライトを切り替えられるようにする",
+    "autoEvaluationNotBefore": null,
+    "useTmux": true,
+    "taskType": null,
+    "modelId": null,
+    "latestVersion": null,
+    "currentVersion": null,
+    "installSteps": [],
+    "installCommand": null,
+    "createdAutomatically": false,
+    "dependencies": []
+  },
+  {
+    "id": "task-1764831839169-99ac54",
+    "name": "GeminiCLI1: ヘッダーを削除してサイドバーとメインウィンドウは画面上部まで表示。タイムラインページの「チケット追加」「担当者管理」「プロジェクト」はタイムラインをクリックしたらサイドバーに表示するように変更",
+    "model": "Gemini CLI",
+    "status": "working",
+    "importance": "medium",
+    "urgency": "medium",
+    "createdAt": "2025-12-04T07:03:59.169Z",
+    "updatedAt": "2025-12-04T07:03:59.169Z",
+    "requiresTerminal": true,
+    "createWorktree": true,
+    "branchName": "task/task-1764831839169-99ac54",
+    "baseBranch": "main",
+    "useTmux": true,
+    "aiCompetitionEntry": true,
+    "aiCompetitionResult": null,
+    "aiCompetitionGroupId": "comp-1764831838768-bwfqi754",
+    "aiCompetitionGroupName": "ヘッダーを削除してサイドバーとメインウィンドウは画面上部まで表示。タイムラインページの「チケット追加」「担当者管理」「プロジェクト」はタイムラインをクリックしたらサイドバーに表示するように変更",
     "aiCompetitionMonitor": false,
     "monitorTargets": null,
     "scoringConfig": null,
-    "worktreePath": ".worktrees\\task-1764773048761-74824c"
+    "worktreePath": ".worktrees\\task-1764831839169-99ac54"
   }
 ]
