--- a/.kamui/tasks-state.json
+++ b/.kamui/tasks-state.json
@@ -187,7 +187,7 @@
     "importance": "medium",
     "urgency": "medium",
     "createdAt": "2025-12-04T07:03:59.169Z",
-    "updatedAt": "2025-12-04T07:03:59.169Z",
+    "updatedAt": "2025-12-04T07:18:46.968Z",
     "requiresTerminal": true,
     "createWorktree": true,
     "branchName": "task/task-1764831839169-99ac54",
@@ -200,6 +200,7 @@
     "aiCompetitionMonitor": false,
     "monitorTargets": null,
     "scoringConfig": null,
-    "worktreePath": ".worktrees\\task-1764831839169-99ac54"
+    "worktreePath": ".worktrees\\task-1764831839169-99ac54",
+    "bookmarked": true
   }
 ]
