feat: 評価レポートとタスク状態を追加し、プロジェクト管理機能を強化

--- a/.kamui/tasks-state.json
+++ b/.kamui/tasks-state.json
@@ -186,22 +186,28 @@
     "status": "working",
     "importance": "medium",
     "urgency": "medium",
+    "branchName": "task/task-1764831839169-99ac54",
+    "baseBranch": "main",
+    "worktreePath": ".worktrees\\task-1764831839169-99ac54",
+    "createWorktree": true,
     "createdAt": "2025-12-04T07:03:59.169Z",
     "updatedAt": "2025-12-04T07:18:46.968Z",
     "requiresTerminal": true,
-    "createWorktree": true,
-    "branchName": "task/task-1764831839169-99ac54",
-    "baseBranch": "main",
-    "useTmux": true,
+    "bookmarked": true,
     "aiCompetitionEntry": true,
     "aiCompetitionResult": null,
     "aiCompetitionGroupId": "comp-1764831838768-bwfqi754",
     "aiCompetitionGroupName": "ヘッダーを削除してサイドバーとメインウィンドウは画面上部まで表示。タイムラインページの「チケット追加」「担当者管理」「プロジェクト」はタイムラインをクリックしたらサイドバーに表示するように変更",
-    "aiCompetitionMonitor": false,
-    "monitorTargets": null,
-    "scoringConfig": null,
-    "worktreePath": ".worktrees\\task-1764831839169-99ac54",
-    "bookmarked": true
+    "autoEvaluationNotBefore": null,
+    "useTmux": true,
+    "taskType": null,
+    "modelId": null,
+    "latestVersion": null,
+    "currentVersion": null,
+    "installSteps": [],
+    "installCommand": null,
+    "createdAutomatically": false,
+    "dependencies": []
   },
   {
     "id": "task-1764833201838-43e56e",
@@ -210,21 +216,124 @@
     "status": "working",
     "importance": "medium",
     "urgency": "medium",
+    "branchName": "task/task-1764833201838-43e56e",
+    "baseBranch": "main",
+    "worktreePath": ".worktrees\\task-1764833201838-43e56e",
+    "createWorktree": true,
     "createdAt": "2025-12-04T07:26:41.838Z",
     "updatedAt": "2025-12-04T08:08:40.792Z",
     "requiresTerminal": true,
-    "createWorktree": true,
-    "branchName": "task/task-1764833201838-43e56e",
-    "baseBranch": "main",
-    "useTmux": true,
+    "bookmarked": true,
     "aiCompetitionEntry": true,
     "aiCompetitionResult": null,
     "aiCompetitionGroupId": "comp-1764833201622-2ukfh1np",
     "aiCompetitionGroupName": "ホームに進行中のプロジェクト情報を表示、また、次のプロジェクト数を表示：\"進行中\",\"完了\",\"計画中\",\"総数\"",
+    "autoEvaluationNotBefore": null,
+    "useTmux": true,
+    "taskType": null,
+    "modelId": null,
+    "latestVersion": null,
+    "currentVersion": null,
+    "installSteps": [],
+    "installCommand": null,
+    "createdAutomatically": false,
+    "dependencies": []
+  },
+  {
+    "id": "task-1764853818062-6585b5",
+    "name": "サイドバーのプロジェクトを選択したときの画面で、計画中、進行中、終了したプロジェクトの一覧を表示してほしい。\nまた、プロジェクトの新規作成、編集、削除ができるようにしたい。\nプロジェクトの設定画面では、プロジェクト名、プロジェクト概要、プロジェクトマネージャー、予定工数、見積金額、開始日、終了日、備考を設定できるようにしたい。",
+    "model": "Claude Code",
+    "status": "pending",
+    "importance": "medium",
+    "urgency": "medium",
+    "createdAt": "2025-12-04T13:10:18.062Z",
+    "updatedAt": "2025-12-04T13:10:18.062Z",
+    "requiresTerminal": false,
+    "createWorktree": false,
+    "branchName": null,
+    "baseBranch": null,
+    "useTmux": false,
+    "aiCompetitionEntry": false,
+    "aiCompetitionResult": null,
+    "aiCompetitionGroupId": null,
+    "aiCompetitionGroupName": null,
+    "aiCompetitionMonitor": false,
+    "monitorTargets": null,
+    "scoringConfig": null
+  },
+  {
+    "id": "task-1764853833821-7b58e2",
+    "name": "CodexCLI1: サイドバーのプロジェクトを選択したときの画面で、計画中、進行中、終了したプロジェクトの一覧を表示してほしい。\nまた、プロジェクトの新規作成、編集、削除ができるようにしたい。\nプロジェクトの設定画面では、プロジェクト名、プロジェクト概要、プロジェクトマネージャー、予定工数、見積金額、開始日、終了日、備考を設定できるようにしたい。",
+    "model": "Codex CLI",
+    "status": "working",
+    "importance": "medium",
+    "urgency": "medium",
+    "createdAt": "2025-12-04T13:10:33.821Z",
+    "updatedAt": "2025-12-04T13:10:33.821Z",
+    "requiresTerminal": true,
+    "createWorktree": true,
+    "branchName": "task/task-1764853833821-7b58e2",
+    "baseBranch": "main",
+    "useTmux": true,
+    "aiCompetitionEntry": true,
+    "aiCompetitionResult": null,
+    "aiCompetitionGroupId": "comp-1764853833819-b52wolth",
+    "aiCompetitionGroupName": "サイドバーのプロジェクトを選択したときの画面で、計画中、進行中、終了したプロジェクトの一覧を表示してほしい。\nまた、プロジェクトの新規作成、編集、削除ができるようにしたい。\nプロジェクトの設定画面では、プロジェクト名、プロジェクト概要、プロジェクトマネージャー、予定工数、見積金額、開始日、終了日、備考を設定できるようにしたい。",
     "aiCompetitionMonitor": false,
     "monitorTargets": null,
     "scoringConfig": null,
-    "worktreePath": ".worktrees\\task-1764833201838-43e56e",
-    "bookmarked": true
+    "worktreePath": ".worktrees/task-1764853833821-7b58e2",
+    "medal": "none",
+    "aiCompetitionScore": 19
+  },
+  {
+    "id": "task-1764853834033-310c6e",
+    "name": "ClaudeCode1: サイドバーのプロジェクトを選択したときの画面で、計画中、進行中、終了したプロジェクトの一覧を表示してほしい。\nまた、プロジェクトの新規作成、編集、削除ができるようにしたい。\nプロジェクトの設定画面では、プロジェクト名、プロジェクト概要、プロジェクトマネージャー、予定工数、見積金額、開始日、終了日、備考を設定できるようにしたい。",
+    "model": "Claude Code",
+    "status": "working",
+    "importance": "medium",
+    "urgency": "medium",
+    "createdAt": "2025-12-04T13:10:34.033Z",
+    "updatedAt": "2025-12-04T13:10:34.033Z",
+    "requiresTerminal": true,
+    "createWorktree": true,
+    "branchName": "task/task-1764853834033-310c6e",
+    "baseBranch": "main",
+    "useTmux": true,
+    "aiCompetitionEntry": true,
+    "aiCompetitionResult": null,
+    "aiCompetitionGroupId": "comp-1764853833819-b52wolth",
+    "aiCompetitionGroupName": "サイドバーのプロジェクトを選択したときの画面で、計画中、進行中、終了したプロジェクトの一覧を表示してほしい。\nまた、プロジェクトの新規作成、編集、削除ができるようにしたい。\nプロジェクトの設定画面では、プロジェクト名、プロジェクト概要、プロジェクトマネージャー、予定工数、見積金額、開始日、終了日、備考を設定できるようにしたい。",
+    "aiCompetitionMonitor": false,
+    "monitorTargets": null,
+    "scoringConfig": null,
+    "worktreePath": ".worktrees/task-1764853834033-310c6e",
+    "medal": "none",
+    "aiCompetitionScore": 19
+  },
+  {
+    "id": "task-1764853834646-f500d3",
+    "name": "GeminiCLI1: サイドバーのプロジェクトを選択したときの画面で、計画中、進行中、終了したプロジェクトの一覧を表示してほしい。\nまた、プロジェクトの新規作成、編集、削除ができるようにしたい。\nプロジェクトの設定画面では、プロジェクト名、プロジェクト概要、プロジェクトマネージャー、予定工数、見積金額、開始日、終了日、備考を設定できるようにしたい。",
+    "model": "Gemini CLI",
+    "status": "working",
+    "importance": "medium",
+    "urgency": "medium",
+    "createdAt": "2025-12-04T13:10:34.646Z",
+    "updatedAt": "2025-12-04T13:10:34.646Z",
+    "requiresTerminal": true,
+    "createWorktree": true,
+    "branchName": "task/task-1764853834646-f500d3",
+    "baseBranch": "main",
+    "useTmux": true,
+    "aiCompetitionEntry": true,
+    "aiCompetitionResult": null,
+    "aiCompetitionGroupId": "comp-1764853833819-b52wolth",
+    "aiCompetitionGroupName": "サイドバーのプロジェクトを選択したときの画面で、計画中、進行中、終了したプロジェクトの一覧を表示してほしい。\nまた、プロジェクトの新規作成、編集、削除ができるようにしたい。\nプロジェクトの設定画面では、プロジェクト名、プロジェクト概要、プロジェクトマネージャー、予定工数、見積金額、開始日、終了日、備考を設定できるようにしたい。",
+    "aiCompetitionMonitor": false,
+    "monitorTargets": null,
+    "scoringConfig": null,
+    "worktreePath": ".worktrees/task-1764853834646-f500d3",
+    "medal": "none",
+    "aiCompetitionScore": 19
   }
 ]
