feat: タスク状態ファイルに新しいフィールドを追加し、マネージャーの設定を改善

--- a/.kamui/tasks-state.json
+++ b/.kamui/tasks-state.json
@@ -246,8 +246,128 @@
     "status": "pending",
     "importance": "medium",
     "urgency": "medium",
+    "branchName": null,
+    "baseBranch": null,
+    "worktreePath": null,
+    "createWorktree": false,
     "createdAt": "2025-12-04T13:10:18.062Z",
     "updatedAt": "2025-12-04T13:10:18.062Z",
+    "requiresTerminal": false,
+    "bookmarked": false,
+    "aiCompetitionEntry": false,
+    "aiCompetitionResult": null,
+    "aiCompetitionGroupId": null,
+    "aiCompetitionGroupName": null,
+    "autoEvaluationNotBefore": null,
+    "useTmux": false,
+    "taskType": null,
+    "modelId": null,
+    "latestVersion": null,
+    "currentVersion": null,
+    "installSteps": [],
+    "installCommand": null,
+    "createdAutomatically": false,
+    "dependencies": []
+  },
+  {
+    "id": "task-1764853833821-7b58e2",
+    "name": "CodexCLI1: サイドバーのプロジェクトを選択したときの画面で、計画中、進行中、終了したプロジェクトの一覧を表示してほしい。\nまた、プロジェクトの新規作成、編集、削除ができるようにしたい。\nプロジェクトの設定画面では、プロジェクト名、プロジェクト概要、プロジェクトマネージャー、予定工数、見積金額、開始日、終了日、備考を設定できるようにしたい。",
+    "model": "Codex CLI",
+    "status": "working",
+    "importance": "medium",
+    "urgency": "medium",
+    "branchName": "task/task-1764853833821-7b58e2",
+    "baseBranch": "main",
+    "worktreePath": ".worktrees\\task-1764853833821-7b58e2",
+    "createWorktree": true,
+    "createdAt": "2025-12-04T13:10:33.821Z",
+    "updatedAt": "2025-12-04T13:10:33.821Z",
+    "requiresTerminal": true,
+    "bookmarked": false,
+    "aiCompetitionEntry": true,
+    "aiCompetitionResult": null,
+    "aiCompetitionGroupId": "comp-1764853833819-b52wolth",
+    "aiCompetitionGroupName": "サイドバーのプロジェクトを選択したときの画面で、計画中、進行中、終了したプロジェクトの一覧を表示してほしい。\nまた、プロジェクトの新規作成、編集、削除ができるようにしたい。\nプロジェクトの設定画面では、プロジェクト名、プロジェクト概要、プロジェクトマネージャー、予定工数、見積金額、開始日、終了日、備考を設定できるようにしたい。",
+    "autoEvaluationNotBefore": null,
+    "useTmux": true,
+    "taskType": null,
+    "modelId": null,
+    "latestVersion": null,
+    "currentVersion": null,
+    "installSteps": [],
+    "installCommand": null,
+    "createdAutomatically": false,
+    "dependencies": []
+  },
+  {
+    "id": "task-1764853834033-310c6e",
+    "name": "ClaudeCode1: サイドバーのプロジェクトを選択したときの画面で、計画中、進行中、終了したプロジェクトの一覧を表示してほしい。\nまた、プロジェクトの新規作成、編集、削除ができるようにしたい。\nプロジェクトの設定画面では、プロジェクト名、プロジェクト概要、プロジェクトマネージャー、予定工数、見積金額、開始日、終了日、備考を設定できるようにしたい。",
+    "model": "Claude Code",
+    "status": "working",
+    "importance": "medium",
+    "urgency": "medium",
+    "branchName": "task/task-1764853834033-310c6e",
+    "baseBranch": "main",
+    "worktreePath": ".worktrees\\task-1764853834033-310c6e",
+    "createWorktree": true,
+    "createdAt": "2025-12-04T13:10:34.033Z",
+    "updatedAt": "2025-12-04T13:10:34.033Z",
+    "requiresTerminal": true,
+    "bookmarked": false,
+    "aiCompetitionEntry": true,
+    "aiCompetitionResult": null,
+    "aiCompetitionGroupId": "comp-1764853833819-b52wolth",
+    "aiCompetitionGroupName": "サイドバーのプロジェクトを選択したときの画面で、計画中、進行中、終了したプロジェクトの一覧を表示してほしい。\nまた、プロジェクトの新規作成、編集、削除ができるようにしたい。\nプロジェクトの設定画面では、プロジェクト名、プロジェクト概要、プロジェクトマネージャー、予定工数、見積金額、開始日、終了日、備考を設定できるようにしたい。",
+    "autoEvaluationNotBefore": null,
+    "useTmux": true,
+    "taskType": null,
+    "modelId": null,
+    "latestVersion": null,
+    "currentVersion": null,
+    "installSteps": [],
+    "installCommand": null,
+    "createdAutomatically": false,
+    "dependencies": []
+  },
+  {
+    "id": "task-1764853834646-f500d3",
+    "name": "GeminiCLI1: サイドバーのプロジェクトを選択したときの画面で、計画中、進行中、終了したプロジェクトの一覧を表示してほしい。\nまた、プロジェクトの新規作成、編集、削除ができるようにしたい。\nプロジェクトの設定画面では、プロジェクト名、プロジェクト概要、プロジェクトマネージャー、予定工数、見積金額、開始日、終了日、備考を設定できるようにしたい。",
+    "model": "Gemini CLI",
+    "status": "working",
+    "importance": "medium",
+    "urgency": "medium",
+    "branchName": "task/task-1764853834646-f500d3",
+    "baseBranch": "main",
+    "worktreePath": ".worktrees\\task-1764853834646-f500d3",
+    "createWorktree": true,
+    "createdAt": "2025-12-04T13:10:34.646Z",
+    "updatedAt": "2025-12-04T13:10:34.646Z",
+    "requiresTerminal": true,
+    "bookmarked": false,
+    "aiCompetitionEntry": true,
+    "aiCompetitionResult": null,
+    "aiCompetitionGroupId": "comp-1764853833819-b52wolth",
+    "aiCompetitionGroupName": "サイドバーのプロジェクトを選択したときの画面で、計画中、進行中、終了したプロジェクトの一覧を表示してほしい。\nまた、プロジェクトの新規作成、編集、削除ができるようにしたい。\nプロジェクトの設定画面では、プロジェクト名、プロジェクト概要、プロジェクトマネージャー、予定工数、見積金額、開始日、終了日、備考を設定できるようにしたい。",
+    "autoEvaluationNotBefore": null,
+    "useTmux": true,
+    "taskType": null,
+    "modelId": null,
+    "latestVersion": null,
+    "currentVersion": null,
+    "installSteps": [],
+    "installCommand": null,
+    "createdAutomatically": false,
+    "dependencies": []
+  },
+  {
+    "id": "task-1764979280869-ce6eab",
+    "name": ".kiro/specs/dashboard-status/tasks.md を参照して実装を開始\n要件は .kiro/specs/dashboard-status/requirements.md 、設計は .kiro/specs/dashboard-status/design.md を参照",
+    "model": "Gemini CLI",
+    "status": "pending",
+    "importance": "medium",
+    "urgency": "medium",
+    "createdAt": "2025-12-06T00:01:20.869Z",
+    "updatedAt": "2025-12-06T00:01:20.869Z",
     "requiresTerminal": false,
     "createWorktree": false,
     "branchName": null,
@@ -262,78 +382,61 @@
     "scoringConfig": null
   },
   {
-    "id": "task-1764853833821-7b58e2",
-    "name": "CodexCLI1: サイドバーのプロジェクトを選択したときの画面で、計画中、進行中、終了したプロジェクトの一覧を表示してほしい。\nまた、プロジェクトの新規作成、編集、削除ができるようにしたい。\nプロジェクトの設定画面では、プロジェクト名、プロジェクト概要、プロジェクトマネージャー、予定工数、見積金額、開始日、終了日、備考を設定できるようにしたい。",
-    "model": "Codex CLI",
-    "status": "working",
-    "importance": "medium",
-    "urgency": "medium",
-    "createdAt": "2025-12-04T13:10:33.821Z",
-    "updatedAt": "2025-12-04T13:10:33.821Z",
-    "requiresTerminal": true,
-    "createWorktree": true,
-    "branchName": "task/task-1764853833821-7b58e2",
-    "baseBranch": "main",
-    "useTmux": true,
-    "aiCompetitionEntry": true,
-    "aiCompetitionResult": null,
-    "aiCompetitionGroupId": "comp-1764853833819-b52wolth",
-    "aiCompetitionGroupName": "サイドバーのプロジェクトを選択したときの画面で、計画中、進行中、終了したプロジェクトの一覧を表示してほしい。\nまた、プロジェクトの新規作成、編集、削除ができるようにしたい。\nプロジェクトの設定画面では、プロジェクト名、プロジェクト概要、プロジェクトマネージャー、予定工数、見積金額、開始日、終了日、備考を設定できるようにしたい。",
-    "aiCompetitionMonitor": false,
-    "monitorTargets": null,
-    "scoringConfig": null,
-    "worktreePath": ".worktrees/task-1764853833821-7b58e2",
-    "medal": "none",
-    "aiCompetitionScore": 19
-  },
-  {
-    "id": "task-1764853834033-310c6e",
-    "name": "ClaudeCode1: サイドバーのプロジェクトを選択したときの画面で、計画中、進行中、終了したプロジェクトの一覧を表示してほしい。\nまた、プロジェクトの新規作成、編集、削除ができるようにしたい。\nプロジェクトの設定画面では、プロジェクト名、プロジェクト概要、プロジェクトマネージャー、予定工数、見積金額、開始日、終了日、備考を設定できるようにしたい。",
+    "id": "task-1764979294383-ac1236",
+    "name": "ClaudeCode1: .kiro/specs/dashboard-status/tasks.md を参照して実装を開始\n要件は .kiro/specs/dashboard-status/requirements.md 、設計は .kiro/specs/dashboard-status/design.md を参照",
     "model": "Claude Code",
     "status": "working",
     "importance": "medium",
     "urgency": "medium",
-    "createdAt": "2025-12-04T13:10:34.033Z",
-    "updatedAt": "2025-12-04T13:10:34.033Z",
+    "createdAt": "2025-12-06T00:01:34.383Z",
+    "updatedAt": "2025-12-06T00:01:34.383Z",
     "requiresTerminal": true,
     "createWorktree": true,
-    "branchName": "task/task-1764853834033-310c6e",
+    "branchName": "task/task-1764979294383-ac1236",
     "baseBranch": "main",
     "useTmux": true,
     "aiCompetitionEntry": true,
     "aiCompetitionResult": null,
-    "aiCompetitionGroupId": "comp-1764853833819-b52wolth",
-    "aiCompetitionGroupName": "サイドバーのプロジェクトを選択したときの画面で、計画中、進行中、終了したプロジェクトの一覧を表示してほしい。\nまた、プロジェクトの新規作成、編集、削除ができるようにしたい。\nプロジェクトの設定画面では、プロジェクト名、プロジェクト概要、プロジェクトマネージャー、予定工数、見積金額、開始日、終了日、備考を設定できるようにしたい。",
+    "aiCompetitionGroupId": "comp-1764979294176-dte4mm2r",
+    "aiCompetitionGroupName": ".kiro/specs/dashboard-status/tasks.md を参照して実装を開始\n要件は .kiro/specs/dashboard-status/requirements.md 、設計は .kiro/specs/dashboard-status/design.md を参照",
     "aiCompetitionMonitor": false,
     "monitorTargets": null,
     "scoringConfig": null,
-    "worktreePath": ".worktrees/task-1764853834033-310c6e",
-    "medal": "none",
-    "aiCompetitionScore": 19
+    "worktreePath": ".worktrees\\task-1764979294383-ac1236"
   },
   {
-    "id": "task-1764853834646-f500d3",
-    "name": "GeminiCLI1: サイドバーのプロジェクトを選択したときの画面で、計画中、進行中、終了したプロジェクトの一覧を表示してほしい。\nまた、プロジェクトの新規作成、編集、削除ができるようにしたい。\nプロジェクトの設定画面では、プロジェクト名、プロジェクト概要、プロジェクトマネージャー、予定工数、見積金額、開始日、終了日、備考を設定できるようにしたい。",
-    "model": "Gemini CLI",
+    "id": "task-1764979298672-57b5fb",
+    "name": "🔍Monitor: .kiro/specs/dashboard-status/tasks.md を参照して実装を開始\n要件は .kiro/specs/dashboard-status/requirements.md 、設計は .kiro/specs/dashboard-status/design.md を参照",
+    "model": "codex",
     "status": "working",
     "importance": "medium",
     "urgency": "medium",
-    "createdAt": "2025-12-04T13:10:34.646Z",
-    "updatedAt": "2025-12-04T13:10:34.646Z",
+    "createdAt": "2025-12-06T00:01:38.672Z",
+    "updatedAt": "2025-12-06T00:01:38.672Z",
     "requiresTerminal": true,
     "createWorktree": true,
-    "branchName": "task/task-1764853834646-f500d3",
+    "branchName": "task/task-1764979298672-57b5fb",
     "baseBranch": "main",
     "useTmux": true,
-    "aiCompetitionEntry": true,
+    "aiCompetitionEntry": false,
     "aiCompetitionResult": null,
-    "aiCompetitionGroupId": "comp-1764853833819-b52wolth",
-    "aiCompetitionGroupName": "サイドバーのプロジェクトを選択したときの画面で、計画中、進行中、終了したプロジェクトの一覧を表示してほしい。\nまた、プロジェクトの新規作成、編集、削除ができるようにしたい。\nプロジェクトの設定画面では、プロジェクト名、プロジェクト概要、プロジェクトマネージャー、予定工数、見積金額、開始日、終了日、備考を設定できるようにしたい。",
-    "aiCompetitionMonitor": false,
-    "monitorTargets": null,
-    "scoringConfig": null,
-    "worktreePath": ".worktrees/task-1764853834646-f500d3",
-    "medal": "none",
-    "aiCompetitionScore": 19
+    "aiCompetitionGroupId": "comp-1764979294176-dte4mm2r",
+    "aiCompetitionGroupName": ".kiro/specs/dashboard-status/tasks.md を参照して実装を開始\n要件は .kiro/specs/dashboard-status/requirements.md 、設計は .kiro/specs/dashboard-status/design.md を参照",
+    "aiCompetitionMonitor": true,
+    "monitorTargets": [
+      "task-1764979294178-f48d10",
+      "task-1764979294577-7ed2e4",
+      "task-1764979294383-ac1236"
+    ],
+    "scoringConfig": {
+      "auditEnabled": false,
+      "auditPrompt": "",
+      "enabled": true,
+      "prompt": "要件実装度/コスト/実装品質/UXと明瞭度/拡張性/安定性",
+      "rubric": "medals",
+      "model": "codex"
+    },
+    "autoEvaluationNotBefore": 1764979354176,
+    "worktreePath": ".worktrees\\task-1764979298672-57b5fb"
   }
 ]
